--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="Jatin Chauhan" content="" />
+        <meta name="description" content="Know about Jatin Chauhan. About me, Recent Projects worked on, Educational background, Technical Skills, Interests & hobbies and more. " />
+        <meta name="keywords" content="Jatin Chauhan, Web Developer, Software Developer, Work, Engineer, Aboutme, Projects, Education, Skills, Interests, Extracurricular">
+        <meta name="author" content="Jatin Chauhan" />
+        <meta name="theme-color" content="#bd5d38" />
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-mobile-web-app-status-bar-style" content="#bd5d38">
         <title>Jatin Chauhan</title>
-        <link rel="icon" type="image/x-icon" href="./img/favicon.ico" />
+        <link rel="shortcut icon" type="image/x-icon" href="./img/favicon.ico" />
+        <link rel="icon" type="image/png" href="./img/favicon.png" sizes="192x192">
+        <link rel="apple-touch-icon" sizes="180x180" href="./img/favicon.png">
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -48,12 +54,11 @@
                         <a href="mailto:jatin.405chauhan@gmail.com">jatin.405chauhan@gmail.com</a>
                     </div>
                     <p class="lead mb-5">Web Developer with a deep interest in technology. Able to take ideas from concept to wireframes to prototype to production. Love developing products such as Web Application and software that provide an immersive, fluid and smooth experience. Over the Years, one thing Computer Science coached me is that Everything is Logic and anything could be built using software. 
-
                     </p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/-jatinchauhan-/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/mrjatinchauhan"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#"><i class="far fa-file"></i></a>
+                        <a class="social-icon" href="https://drive.google.com/file/d/1eHftlpjhRTdkLBtrqzFo_gZKp8NBVkRn/view?usp=sharing" target="_blank"><i class="far fa-file"></i></a>
                     </div>
                 </div>
             </section>
@@ -67,24 +72,27 @@
                           <img src="./img/facerecognitionbrain.png" class="card-img-top" alt="Face Recognition Brain">
                           <div class="card-body">
                             <h5 class="card-title">Face Recognition Brain</h5>
-                            <p class="card-text"><b>Image Face Recognition App</b>. Detect Faces in image from user's input URL using <b>machine learning API</b>. This <b>React App</b> is using Tachyons library for design, KnexJS for database connetivity, Bcrypt for <b>password Hashing</b>, NodeJs for Backend Server with <b>PostgreSQL handling the database.</b></p>
-                            <a href="https://github.com/mrjatinchauhan/facerecognitionbrain"><button type="button" class="btn btn-primary">view here</button></a>
+                            <p class="card-text"><b>Image Face Recognition App</b>. Detect Faces in image from user's input URL using <b>machine learning API</b>. This <b>React App</b> is using Tachyons library for design, KnexJS for database connectivity, Bcrypt for <b>password Hashing</b>, NodeJs for Backend Server with <b>PostgreSQL handling the database.</b></p>
+                            <a href="https://github.com/mrjatinchauhan/facerecognitionbrain"><button type="button" class="btn btn-primary">Code</button></a>
+                            <a href="https://smart-facerecognitionbrain.herokuapp.com/"><button type="button" class="btn btn-primary">Project</button></a>
                           </div>
                         </div>
                         <div class="card">
                           <img src="./img/tourindia.png" class="card-img-top" alt="Tour India">
                           <div class="card-body">
                             <h5 class="card-title">Tour India</h5>
-                            <p class="card-text"><b>Tourism Website</b> Portfolio which <b>displays travel destinations</b> across Country. This front end is build on <b>BootStrap</b> Features several sections, <b>a portfolio grid</b> (tourist-places), <b>Blogs</b> and About us Section.</p>
-                            <a href="https://github.com/mrjatinchauhan/tourindia"><button type="button" class="btn btn-primary">view here</button></a>
+                            <p class="card-text"><b>Tourism Website</b> Portfolio which <b>displays travel destinations</b> across Country. This theme is build on <b>BootStrap</b> featuring several content sections, <b>a portfolio grid</b> (tourist-places), window modal for each portfolio item, <b>Blogs</b> and About us Section.</p>
+                            <a href="https://github.com/mrjatinchauhan/tourindia"><button type="button" class="btn btn-primary">Code</button></a>
+                            <a href="https://mrjatinchauhan.github.io/tourindia"><button type="button" class="btn btn-primary">Project</button></a>
                           </div>
                         </div>
                         <div class="card">
                           <img src="./img/robofriends.png" class="card-img-top" alt="RoboFriends">
                           <div class="card-body">
                             <h5 class="card-title">RoboFriends</h5>
-                            <p class="card-text"><b>Interactive</b> react app - <b>Search Robots</b> by their name and contact <b>cards are dynamically displayed</b>. Here, Tachyons css library and RoboHash[<b>robot generating API</b>] is been used.</p>
-                            <a href="https://github.com/mrjatinchauhan/RoboFriends"><button type="button" class="btn btn-primary">view here</button></a>
+                            <p class="card-text"><b>Interactive</b> react app - <b>Search Robots</b> by their name and contact <b>cards are dynamically displayed</b>. Here, Tachyons css library and RoboHash[<b>robot generating API</b>] has been used.</p>
+                            <a href="https://github.com/mrjatinchauhan/RoboFriends"><button type="button" class="btn btn-primary">Code</button></a>
+                            <a href="https://mrjatinchauhan.github.io/RoboFriends/"><button type="button" class="btn btn-primary">Project</button></a>
                           </div>
                         </div>
                       </div>
@@ -155,13 +163,13 @@
                         <td>C/C++</td>
                         <td>Css</td>
                         <td>ExpressJS</td>
-                        <td>GitHub</td>
+                        <td>Postman</td>
+                        <td>VS Code</td>
                       </tr>
                       <tr>
                         <td>Php(Core)</td>
                         <td>JavaScript</td>
-                        <td>Postman</td>
-                        <td>VS Code</td>
+                        <td>Brackets</td>
                       </tr>
                       <tr>
                         <td></td>
@@ -208,7 +216,7 @@
                         </li>
                         <li class="d-flex flex-column flex-md-row justify-content-between">
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Member of Microsoft Technical Club
+                            Member of Microsoft Technical Community
                             <div class="flex-shrink-0"><span class="text-primary">January 2019 - April 2019</span></div>
                         </li>
                         <li class="d-flex flex-column flex-md-row justify-content-between">
