--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="Know about Jatin Chauhan. About me, Recent Projects worked on, Educational background, Technical Skills, Interests & hobbies and more. " />
-        <meta name="keywords" content="Jatin Chauhan, Web Developer, Software Developer, Work, Engineer, Aboutme, Projects, Education, Skills, Interests, Extracurricular">
+        <meta name="description" content="Know about Jatin Chauhan. About me, Recent Projects worked on, Educational background, Technical Skills, Interests and more." />
+        <meta name="keywords" content="Jatin Chauhan, Web Developer, Software Developer, Technology, Work, Engineer, Aboutme, Projects, Education, Skills">
         <meta name="author" content="Jatin Chauhan" />
         <meta name="theme-color" content="#bd5d38" />
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="#bd5d38">
+        <meta property="og:image" content="./img/profile.png" />
+        <meta property="og:description" content="Know about Jatin Chauhan. About me, Recent Projects worked on, Educational background, Technical Skills, Interests and more." />
+        <meta property="og:url"content="https://jatinchauhan.tech/" />
+        <meta property="og:title" content="Jatin Chauhan" />
         <title>Jatin Chauhan</title>
         <link rel="shortcut icon" type="image/x-icon" href="./img/favicon.ico" />
         <link rel="icon" type="image/png" href="./img/favicon.png" sizes="192x192">
