--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/-jatinchauhan-/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/mrjatinchauhan"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="https://drive.google.com/file/d/1eHftlpjhRTdkLBtrqzFo_gZKp8NBVkRn/view?usp=sharing" target="_blank"><i class="far fa-file"></i></a>
+                        <a class="social-icon" href="https://drive.google.com/file/d/1ZQo4_fVD4UeF9pFZuDudiTVyERFgCu-5/view?usp=sharing" target="_blank"><i class="far fa-file"></i></a>
                     </div>
                 </div>
             </section>
@@ -167,12 +167,12 @@
                         <td>C/C++</td>
                         <td>Css</td>
                         <td>ExpressJS</td>
-                        <td>Postman</td>
                         <td>VS Code</td>
                       </tr>
                       <tr>
                         <td>Php(Core)</td>
                         <td>JavaScript</td>
+                        <td>Postman API</td>
                         <td>Brackets</td>
                       </tr>
                       <tr>
