--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <!-- Meta tag defines metadata of HTML document-->
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="Know about Jatin Chauhan. About me, Recent Projects worked on, Educational background, Technical Skills, Interests and more." />
@@ -14,9 +15,17 @@
         <meta property="og:url"content="https://jatinchauhan.tech/" />
         <meta property="og:title" content="Jatin Chauhan" />
         <title>Jatin Chauhan</title>
-        <link rel="shortcut icon" type="image/x-icon" href="./img/favicon.ico" />
-        <link rel="icon" type="image/png" href="./img/favicon.png" sizes="192x192">
-        <link rel="apple-touch-icon" sizes="180x180" href="./img/favicon.png">
+        <!-- Favicons-->
+        <link rel="apple-touch-icon" sizes="180x180" href="./img/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="194x194" href="./img/favicon-194x194.png">
+        <link rel="icon" type="image/png" sizes="192x192" href="./img/android-chrome-192x192.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon-16x16.png">
+        <link rel="manifest" href="./img/site.webmanifest">
+        <link rel="mask-icon" href="./img/safari-pinned-tab.svg" color="#5bbad5">
+        <meta name="msapplication-TileColor" content="#da532c">
+        <meta name="msapplication-TileImage" content="/mstile-144x144.png">
+        <meta name="theme-color" content="#ffffff">
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
