:pencil: IMPROVE:Content

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <span class="text-primary">Chauhan</span>
                     </h1>
                     <div class="subheading mb-5">
-                        Rajasthan · India
+                        Rajasthan · India · 
                         <a href="mailto:jatin.405chauhan@gmail.com">jatin.405chauhan@gmail.com</a>
                     </div>
                     <p class="lead mb-5">Web Developer with a deep interest in technology. Able to take ideas from concept to wireframes to prototype to production. Love developing products such as Web Application and software that provide an immersive, fluid and smooth experience. Over the Years, one thing Computer Science coached me is that Everything is Logic and anything could be built using software. 
@@ -71,7 +71,7 @@
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/-jatinchauhan-/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/mrjatinchauhan"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="https://drive.google.com/file/d/1YeVz8GGCPtFYit-SaQsVvBed9yUemkGB/view?usp=sharing" target="_blank"><i class="far fa-file"></i></a>
+                        <a class="social-icon" href="https://drive.google.com/file/d/1Et01b_N2BdwbENldctEnd0Ib8g3p4DlG/view?usp=sharing" target="_blank"><i class="far fa-file"></i></a>
                     </div>
                 </div>
             </section>
@@ -217,11 +217,11 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Web Marketing - Search Engine Optimization
+                            Amazon Skills Development
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Amazon Skills Development
+                            Web Marketing - Search Engine Optimization
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
