:package: IMPROVE: Icons

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         <meta name="msapplication-TileColor" content="#da532c">
         <meta name="msapplication-TileImage" content="/mstile-144x144.png">
         <meta name="theme-color" content="#ffffff">
+        <!-- Iconify Design icons-->
+        <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -50,6 +52,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Extras">Extras</a></li>
+                    <a href="https://drive.google.com/file/d/1Et01b_N2BdwbENldctEnd0Ib8g3p4DlG/view?usp=sharing" target="_blank" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">RESUME</a>
                 </ul>
             </div>
         </nav>
@@ -85,7 +88,7 @@
                           <img src="./img/facerecognitionbrain.png" class="card-img-top" alt="Face Recognition Brain">
                           <div class="card-body">
                             <h5 class="card-title">Face Recognition Brain</h5>
-                            <p class="card-text"><b>Image Face Recognition App</b>. Detect Faces in image from user's input URL using <b>machine learning API</b>. This <b>React App</b> is using Tachyons library for design, KnexJS for database connectivity, Bcrypt for <b>password Hashing</b>, NodeJs for Backend Server with <b>PostgreSQL handling the database.</b></p>
+                            <p class="card-text"><b>Image Face Recognition App</b>. Detect Faces in image from user's input URL using <b>machine learning API</b>. This <b>React App</b> is using Tachyons library for design, <b>KnexJS for database connectivity</b>, Bcrypt for password Hashing, <b>NodeJs</b> for Backend Server with <b>PostgreSQL</b> handling the database.</p>
                             <a href="https://github.com/mrjatinchauhan/facerecognitionbrain"><button type="button" class="btn btn-primary">Code</button></a>
                             <a href="https://smart-facerecognitionbrain.herokuapp.com/"><button type="button" class="btn btn-primary">Project</button></a>
                           </div>
@@ -143,18 +146,17 @@
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Programming, Tools & Technologies</div>
                     <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-bootstrap"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-react"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-git"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-github-alt"></i></li>
-                        <li class="list-inline-item"><i class="fas fa-database"></i></li>
-                        <li class="list-inline-item"><i class="fas fa-server"></i></i></li>
-                        <li class="list-inline-item"><i class="fab fa-npm"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-python"></i></li>
+                        <li class="list-inline-item"><span class="iconify" data-icon="logos:html-5" data-inline="false"></span></li>
+                        <li class="list-inline-item"><span class="iconify" data-icon="logos:css-3" data-inline="false"></span></li>
+                        <li class="list-inline-item"><span class="iconify" data-icon="logos:javascript" data-inline="false"></span></li>
+                        <li class="list-inline-item"><span class="iconify" data-icon="logos:bootstrap" data-inline="false"></span></li>
+                        <li class="list-inline-item"><span class="iconify" data-icon="logos:react" data-inline="false"></span></li>
+                        <li class="list-inline-item"><span class="iconify" data-icon="logos:git-icon" data-inline="false"></span></li>
+                        <li class="list-inline-item"><span class="iconify" data-icon="logos:nodejs-icon" data-inline="false"></span></li>
+                        <li class="list-inline-item"><span class="iconify" data-icon="logos:postgresql" data-inline="false"></span></li>
+                        <li class="list-inline-item"><span class="iconify" data-icon="logos:postman" data-inline="false"></span></li>
+                        <li class="list-inline-item"><span class="iconify" data-icon="logos:npm" data-inline="false" data-width="64" data-height="32"></span></li>
+                        <li class="list-inline-item"><span class="iconify" data-icon="logos:visual-studio-code" data-inline="false"></span></li>
                     </ul>
                 <table class="table table-responsive">
                     <thead class="thead-light">
@@ -217,7 +219,7 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Amazon Skills Development
+                            Alexa Skills Development
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
