📦 IMPROVE: index.html

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Extras">Extras</a></li>
-                    <a href="https://drive.google.com/file/d/1Et01b_N2BdwbENldctEnd0Ib8g3p4DlG/view?usp=sharing" target="_blank" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">RESUME</a>
+                    <a href="https://drive.google.com/file/d/1Et01b_N2BdwbENldctEnd0Ib8g3p4DlG/view?usp=sharing" target="_blank" class="btn btn-primary btn-lg active" role="button" aria-pressed="true">VIEW RESUME</a>
                 </ul>
             </div>
         </nav>
