:ok_hand: IMPROVE: index.html

--- a/index.html
+++ b/index.html
@@ -10,21 +10,34 @@
         <meta name="theme-color" content="#bd5d38" />
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="#bd5d38">
-        <meta property="og:image" content="./img/profile.png" />
+        <meta property="og:image" content="https://jatinchauhan.tech/img/shareImage.png" />
         <meta property="og:description" content="Know about Jatin Chauhan. About me, Recent Projects worked on, Educational background, Technical Skills, Interests and more." />
         <meta property="og:url"content="https://jatinchauhan.tech/" />
         <meta property="og:title" content="Jatin Chauhan" />
+        <meta property="og:site_name" id="meta-og-site" content="Jatin Chauhan">
+        <meta property="og:type" id="meta-og-type" content="website">
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:description" content="Know about Jatin Chauhan. About me, Recent Projects worked on, Educational background, Technical Skills, Interests and more." />
+        <meta name="twitter:title" content="Jatin Chauhan" />
+        <meta name="twitter:image" content="https://jatinchauhan.tech/img/shareImage.png" />
         <title>Jatin Chauhan</title>
         <!-- Favicons-->
-        <link rel="apple-touch-icon" sizes="180x180" href="./img/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="194x194" href="./img/favicon-194x194.png">
-        <link rel="icon" type="image/png" sizes="192x192" href="./img/android-chrome-192x192.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon-16x16.png">
-        <link rel="manifest" href="./img/site.webmanifest">
-        <link rel="mask-icon" href="./img/safari-pinned-tab.svg" color="#5bbad5">
-        <meta name="msapplication-TileColor" content="#da532c">
-        <meta name="msapplication-TileImage" content="/mstile-144x144.png">
+        <link rel="apple-touch-icon" sizes="57x57" href="./assets/apple-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="./assets/apple-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="./assets/apple-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="./assets/apple-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="./assets/apple-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="./assets/apple-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="./assets/apple-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="./assets/apple-icon-152x152.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-icon-180x180.png">
+        <link rel="icon" type="image/png" sizes="192x192"  href="./assets/android-icon-192x192.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="./assets/favicon-96x96.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon-16x16.png">
+        <link rel="manifest" href="./assets/manifest.json">
+        <meta name="msapplication-TileColor" content="#ffffff">
+        <meta name="msapplication-TileImage" content="./assets/ms-icon-144x144.png">
         <meta name="theme-color" content="#ffffff">
         <!-- Iconify Design icons-->
         <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
@@ -41,7 +54,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="d-block d-lg-none">Jatin Chauhan</span>
-                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded mx-auto mb-2" src="./img/profile.png" alt="" /></span>
+                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded mx-auto mb-2" src="./assets/profile.png" alt="" /></span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -74,7 +87,7 @@
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/-jatinchauhan-/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/mrjatinchauhan"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="https://drive.google.com/file/d/1ocjneF-Q6AccvkhXPJCrHzg4ux2G4Ueo/view?usp=sharing" target="_blank"><i class="far fa-file"></i></a>
+                        <a class="social-icon" href="https://drive.google.com/file/d/1ocjneF-Q6AccvkhXPJCrHzg4ux2G4Ueo/view?usp=sharing" target="_blank"><i class="fas fa-file-pdf"></i></a>
                     </div>
                 </div>
             </section>
@@ -251,5 +264,16 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
+        <!--schema.org items for webpage-->
+        <script type="application/ld+json">
+            {
+              "@context": "https://schema.org/",
+              "@type": "Person",
+              "name": "Jatin Chauhan",
+              "url": "https://jatinchauhan.tech",
+              "image": "https://jatinchauhan.tech/img/profile.png",
+              "jobTitle": "Developer"  
+            }
+            </script>
     </body>
 </html>
